<resources>
    <string name="app_name">UoL Timetable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UoL Timetable</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="username_txt_box">Student ID</string>
    <string name="password_txt_box">Password</string>
    <string name ="login_button">Sign in</string>
    <!-- Strings related to nav_menu -->
    <string name="nav_schedule">Schedule</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_group_account">Account</string>
    <string name="login_as_lecturer">Login as Lecturer</string>
    <string name="info_register_attendance">register attendance</string>
    <string name="lecturer_card_title">Lecturer</string>
    <string name="location_card_title">Location</string>
    <string name="time_card_title">Time</string>
    <string name="change_room_button">Change Room</string>
    <string name="info_spinner_building">Building</string>


</resources>
