<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lecture_info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/info_lecture_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:text="Lecture Name"
        android:textSize="30sp"
        app:layout_constraintVertical_bias="0.28" />

    <android.support.v7.widget.CardView
        android:id="@+id/info_location_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_lecture_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_lecturer_card"
            android:layout_alignStart="@+id/info_lecturer_card"
            android:elevation="2dp"
            android:padding="16dp">


            <TextView
                android:id="@+id/location_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/location_card_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_card_title"
                android:layout_centerHorizontal="true"
                android:text="location" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/info_time_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_location_card"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginEnd="2dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_lecturer_card"
            android:layout_alignStart="@+id/info_time_card"
            android:elevation="2dp"
            android:padding="16dp">


            <TextView
                android:id="@+id/time_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:text="@string/time_card_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_card_title"
                android:layout_centerHorizontal="true"
                android:text="time 00:00 - 01:00" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/change_room_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_time_card"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/register_attendance_button"
        android:padding="10dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/change_room_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/info_map_frame" />

    <TextView
        android:id="@+id/spinner_text_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/info_spinner_building"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner_text_building"
        android:layout_toEndOf="@+id/spinner_text_building" />

    <FrameLayout
        android:id="@+id/info_map_frame"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:layout_below="@+id/change_room_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

    </FrameLayout>
</RelativeLayout>